--- a/index.html
+++ b/index.html
@@ -1,11 +1,368 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bike Shop</title>
+    <!-- daisy and tailwind css -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+
+    <!-- font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:ital,wght@0,400;0,500;0,600;1,700&display=swap"
+        rel="stylesheet">
+
+    <style>
+        .inter {
+            font-family: 'Inter', sans-serif;
+        }
+
+        .poppins {
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        tomoto: '#E76F51',
+                        tomoto_bg: 'rgba(231, 111, 81, 0.10)',
+
+
+                    }
+                }
+            }
+        }
+    </script>
+
 </head>
-<body>
-    
+
+<body class=" mx-4 lg:mx-16 mt-5 lg:mt-8">
+    <header class=" md:container md:mx-auto">
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="flex-1">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 text-base  rounded-box w-52">
+                            <li><a>Home</a></li>
+                            <li><a>Shop</a></li>
+                            <li><a>News</a></li>
+                            <li><a>Contact</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn  btn-ghost text-2xl lg:text-4xl poppins font-bold">Bike Shop</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1 text-base ">
+                        <li><a>Home</a></li>
+                        <li><a>Shop</a></li>
+                        <li><a>News</a></li>
+                        <li><a>Contact</a></li>
+                    </ul>
+                </div>
+                <div class="">
+                    <a class="btn bg-tomoto text-white ">Login</a>
+                </div>
+            </div>
+
+        </nav>
+    </header>
+    <main class=" md:container md:mx-auto">
+        <section>
+
+            <div class="carousel w-full bg-tomoto_bg  lg:h-[550px]">
+                <!-- bike-1 -->
+                <div id="slide1" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row gap-5 lg:gap-20 p-4 lg:p-24">
+                        <div class="space-y-3 lg:space-y-7 flex-1">
+                            <h1 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p class="text-base">
+                                Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            </p>
+                            <button class="btn bg-tomoto text-white text-base">Purchase</button>
+                        </div>
+                        <div class="flex-1">
+                            <img src="./images/slider/bike1.png" alt="bike3" class="w-[400px]">
+
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- bike-2 -->
+                <div id="slide2" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row gap-5 lg:gap-20 p-4 lg:p-24">
+                        <div class="space-y-3 lg:space-y-7 flex-1">
+                            <h1 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p class="text-base">
+                                Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            </p>
+                            <button class="btn bg-tomoto text-white text-base">Purchase</button>
+                        </div>
+                        <div class="flex-1">
+                            <img src="./images/slider/bike2.png" alt="bike3" class="w-[400px]">
+
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- bike-3 -->
+                <div id="slide3" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row gap-5 lg:gap-20 p-4 lg:p-24">
+                        <div class="space-y-3 lg:space-y-7 flex-1">
+                            <h1 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p class="text-base">
+                                Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            </p>
+                            <button class="btn bg-tomoto text-white text-base">Purchase</button>
+                        </div>
+                        <div class="flex-1">
+                            <img src="./images/slider/bike3.png" alt="bike3" class="w-[400px]">
+
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- bike-4 -->
+                <div id="slide4" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row gap-5 lg:gap-20 p-4 lg:p-24">
+                        <div class="space-y-3 lg:space-y-7 flex-1">
+                            <h1 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                            <p class="text-base">
+                                Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            </p>
+                            <button class="btn bg-tomoto text-white text-base">Purchase</button>
+                        </div>
+                        <div class="flex-1">
+                            <img src="./images/slider/bike4.png" alt="bike3" class="w-[400px]">
+
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+        <!-- Fetured Bikes -->
+        <section class="mt-20 lg:mt-28">
+            <h2 class="poppins text-5xl text-center font-semibold">Fetured Bikes In This Year</h2>
+
+            <h6 class="text-tomoto font-semibold poppins text-center ">Best bike collection</h6>
+            <hr class="w-[58px]  m-auto">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:gap-40 md:gap-32 gap-6 mt-8 lg:mt-14 ">
+                <img src="./images/others/feature-bike.png" alt="">
+                <img src="./images/others/feature-bike.png" alt="">
+                <img src="./images/others/feature-bike.png" alt="">
+
+            </div>
+        </section>
+        <section class="mt-20 lg:mt-28">
+            <h2 class="poppins text-5xl text-center font-semibold">latest News</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-9 mt-10">
+                <!-- 1st bike -->
+                <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure><img src="./images/others/latest1.png" alt="bike" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions ">
+                            <button class="btn bg-tomoto text-white text-base">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- 2nd bike -->
+                <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure><img src="./images/others/latest2.png" alt="bike" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Motorcycles & Scooters</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions ">
+                            <button class="btn bg-tomoto text-white text-base">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3rd bike -->
+                <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure><img src="./images/others/latest3.png" alt="bike" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">2021 Honda CBR500R</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions ">
+                            <button class="btn bg-tomoto text-white text-base">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="mt-20 lg:mt-28 poppins ">
+            <h2 class=" text-5xl text-center font-semibold">Happy <span class="text-tomoto">Happy Clients says</span>
+            </h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-9 mt-10">
+                <div class="card w-96 bg-base-100 shadow-xl p-9 border border-gray-400">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/others/user-1.png" alt="user-1" class="w-52" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+
+                        <p>Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h4 class="text-cyan-400 font-semibold">Regina Miles</h4>
+                        <h4 class=" font-semibold">Banker</h4>
+
+                    </div>
+                </div>
+                <div class="card w-96 bg-base-100 shadow-xl p-9 border border-gray-400">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/others/user-2.png" alt="user-2" class="w-52" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+
+                        <p>Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h4 class="text-cyan-400 font-semibold">Regina Miles</h4>
+                        <h4 class=" font-semibold">Banker</h4>
+
+                    </div>
+                </div>
+                <div class="card w-96 bg-base-100 shadow-xl p-9 border border-gray-400">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/others/user-3.png" alt="user-3" class="w-52" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+
+                        <p>Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h4 class="text-cyan-400 font-semibold">Regina Miles</h4>
+                        <h4 class=" font-semibold">Banker</h4>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="mt-20 lg:mt-28 poppins ">
+            <h2 class=" text-5xl mb-12 text-center font-semibold">Frequently Asked <span class="text-tomoto">Questions</span>
+            </h2>
+            <div class="flex flex-col lg:flex-row gap-10">
+                <div class="">
+                    <img src="./images/others/faq.png" alt="faq">
+                </div>
+                <div>
+                    <div tabindex="0" class="collapse collapse-arrow border border-base-300 bg-base-200">
+                        <div class="collapse-title text-xl font-medium">
+                            What are the most important things I should
+                            know about riding a bike?
+                        </div>
+                        <div class="collapse-content text-base">
+                            <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will
+                                help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                    </div>
+
+                    <div tabindex="0" class="collapse collapse-arrow border border-base-300 bg-base-200">
+                        <div class="collapse-title text-xl font-medium">
+                            How can I tell if my helmet is old and I need a
+                            new one?
+                        </div>
+                        <div class="collapse-content text-base">
+                            <p> “driving” your bike—not just “riding” your bike. This will
+                                help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                    </div>
+
+
+                    <div tabindex="0" class="collapse collapse-arrow border border-base-300 bg-base-200">
+                        <div class="collapse-title text-xl font-medium">
+                            My bike has been in storage is it safe to ride?
+                        </div>
+                        <div class="collapse-content text-base">
+                            <p> Obey all traffic signals, signs, and
+                                laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will
+                                help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                    </div>
+
+
+                    <div tabindex="0" class="collapse collapse-arrow border border-base-300 bg-base-200">
+                        <div class="collapse-title text-xl font-medium">
+                            What rules should I follow when riding my bike?
+                        </div>
+                        <div class="collapse-content text-base">
+                            <p>Safety First! Always obey the rules of the road. </p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
